<resources>
    <string name="app_name">AttractionMap</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="project_name">AttractionMap</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
</resources>